@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.09-dev
 
+handle cases on Win32 when supplied paths have spaces in their
+names [Stas]
+
 c-modules build errors are no longer ignored [Stas]
 
 change -DAPACHE1 (and like defines) to -D APACHE1 to fix Win32
